welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:1: error: ')' expected but integer literal found.
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {if (!negative) {if (() a<0 && b> 0) || (a>0 && b <0)) {true} else {false} } else {if (a<0 && b <0) {true} else {false}}} 
                                                                               ^posNeg:1: error: illegal start of simple expression
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {if (!negative) {if (() a<0 && b> 0) || (a>0 && b <0)) {true} else {false} } else {if (a<0 && b <0) {true} else {false}}} 
                                                                                                                                ^